--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -36,7 +36,7 @@
           <input type="password" placeholder="Password" autocomplete="off" name="password">
           {{form.non_field_errors}}
           <button class="form-btn" type="submit">Log in</button>
-          <a href="{% url 'accounts:signup' %}" class="form-btn" style="font-family: 'Courier New', Courier, monospace; padding: 7px; margin-top: -6.5px; background-color: #42B72A;" >Create New Account</a>
+          <a href="{% url 'accounts:signup' %}" class="form-btn" style="font-family: 'Courier New', Courier, monospace; padding: 7px; margin-top: -6.5px; background-color: #42B72A;" >Create Account</a>
 
           
         </form>
