--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -36,7 +36,7 @@
           <input type="password" placeholder="Password" autocomplete="off" name="password1">
           <input type="password" placeholder="Confirm Password" autocomplete="off" name="password2">
           {{form.non_field_errors}}
-          <button class="form-btn" type="submit">Create New Account</button>
+          <button class="form-btn" type="submit">Create Account</button>
           <a href="{% url 'accounts:loginuser' %}" class="form-btn" style="font-family: 'Courier New', Courier, monospace; padding: 7px; margin-top: -6.5px; background-color: #42B72A;" >Login</a>
 
           
