--- a/home/templates/home_base.html
+++ b/home/templates/home_base.html
@@ -88,7 +88,7 @@
   {% if notification_bar_len > 9 %}
   <style>
   #notifications-inbox{
-    display: inline-block; font-size: 12px; padding: 2px; padding-left: 3px;
+    display: inline-block; font-size: 12px; padding: 2px; padding-left: 6px; font-wight: bold;
   }
   </style>
   {% endif %}
